Fix: Error progress bar color in dark mode

--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -255,12 +255,13 @@ html[data-theme="dark"] body {
 	border-color: var(--dm-progress-check) !important;
 }
 
-[data-theme="dark"] .progress_bar .inner.Error {
+[data-theme="dark"] .progress_bar .inner.Error,
+[data-theme="dark"] .progress_bar .inner.Error.finished {
 	background: var(--dm-progress-error) !important;
 	border-color: var(--dm-progress-error) !important;
 }
 
-[data-theme="dark"] .progress_bar .inner.finished {
+[data-theme="dark"] .progress_bar .inner.finished:not(.Error) {
 	background: var(--dm-progress-finished) !important;
 	border-color: var(--dm-progress-finished) !important;
 }
@@ -528,12 +529,13 @@ html[data-theme="dark"] body {
 		border-color: var(--dm-progress-check) !important;
 	}
 
-	html:not([data-theme="light"]) .progress_bar .inner.Error {
+	html:not([data-theme="light"]) .progress_bar .inner.Error,
+	html:not([data-theme="light"]) .progress_bar .inner.Error.finished {
 		background: var(--dm-progress-error) !important;
 		border-color: var(--dm-progress-error) !important;
 	}
 
-	html:not([data-theme="light"]) .progress_bar .inner.finished {
+	html:not([data-theme="light"]) .progress_bar .inner.finished:not(.Error) {
 		background: var(--dm-progress-finished) !important;
 		border-color: var(--dm-progress-finished) !important;
 	}
